--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="FUNDAMENTALJS/arreglos2.js"></script>
+    <script src="C:\Users\Eliaz Trevizo Gomez\Desktop\CURSO PROGRAMACION\MODULO 2\fundamentaljs\assets\clases\clases.js"></script>
+
+
 </body>
 </html>
